force-app/main/default/objects/USA_Sales_Monitoring_Report__c/USA_Sales_Monitoring_Report__c.object-meta.xml
<CustomObject>
    <label>USA Sales Monitoring Report</label>
    <nameField>
        <label>USA Sales Monitoring Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USA Sales Monitoring Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>