force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/CEorHA__c.field-meta.xml
<CustomField>
    <fullName>CEorHA__c</fullName>
    <label>CEorHA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>