force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>USA Sales Monitoring Report</relationshipLabel>
    <relationshipName>USA_Sales_Monitoring_Report</relationshipName>
    <type>Lookup</type>
</CustomField>