force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Delivery_No__c.field-meta.xml
<CustomField>
    <fullName>Delivery_No__c</fullName>
    <label>Delivery No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>