force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Price__c</fullName>
    <label>Invoice Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>