force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Amount__c</fullName>
    <formula>Invoice_Price__c *  Invoiced_QTY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>