force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Invoiced_Amount_HA__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Amount_HA__c</fullName>
    <label>Invoiced Amount-HA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>