force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Invoiced_QTY__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_QTY__c</fullName>
    <label>Invoiced QTY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>