force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/isZeroFlag__c.field-meta.xml
<CustomField>
    <fullName>isZeroFlag__c</fullName>
    <formula>Invoice_Price__c +  Invoiced_Amount__c  +  Invoiced_QTY__c  +  Pending_ship_inv_within_Curr_month_Amt__c  +  Pending_ship_inv_within_current_month__c  +  Ship_on_following_month__c  +  Ship_on_following_month_Amount__c  +  Total_Amount_for_current_month__c  +  Total_PO_on_hand__c  +  Total_PO_on_hand_USD__c  +  Total_QTY_for_current_month__c  +  ZRSD028__c  +  ZSD005__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isZeroFlag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>