force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/LatestShipOutDate__c.field-meta.xml
<CustomField>
    <fullName>LatestShipOutDate__c</fullName>
    <label>LatestShipOutDate</label>
    <type>Date</type>
</CustomField>