force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/LoadingDate__c.field-meta.xml
<CustomField>
    <fullName>LoadingDate__c</fullName>
    <label>LoadingDate</label>
    <type>Date</type>
</CustomField>