force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Order_class__c.field-meta.xml
<CustomField>
    <fullName>Order_class__c</fullName>
    <label>Order class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>