force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Pending_ship_inv_within_Curr_mo_Amt__c.field-meta.xml
<CustomField>
    <fullName>Pending_ship_inv_within_Curr_mo_Amt__c</fullName>
    <label>Pending ship&amp;inv within Curr. mo. Amt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>