force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Pending_ship_inv_within_Curr_month_Amt__c.field-meta.xml
<CustomField>
    <fullName>Pending_ship_inv_within_Curr_month_Amt__c</fullName>
    <formula>Pending_ship_inv_within_current_month__c *  Invoice_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending ship&amp;inv within Curr. month Amt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>