force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Required_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Delivery_Date__c</fullName>
    <label>Required Delivery Date</label>
    <type>Date</type>
</CustomField>