force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Return_Invoice_Amt__c.field-meta.xml
<CustomField>
    <fullName>Return_Invoice_Amt__c</fullName>
    <formula>IF(CONTAINS(&quot;ZREX&quot;, Order_Type__c), Invoiced_Amount__c,0)</formula>
    <label>Return Invoice Amt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>