force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Ship_on_following_month_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ship_on_following_month_Amount__c</fullName>
    <formula>Invoice_Price__c  *  Ship_on_following_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship on following month Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>