force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Ship_on_following_month_Amount_HA__c.field-meta.xml
<CustomField>
    <fullName>Ship_on_following_month_Amount_HA__c</fullName>
    <label>Ship on following month Amount -HA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>