force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Shippingcondition__c.field-meta.xml
<CustomField>
    <fullName>Shippingcondition__c</fullName>
    <label>Shippingcondition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>