force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/SO_No__c.field-meta.xml
<CustomField>
    <fullName>SO_No__c</fullName>
    <label>SO No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>