force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Total_Amount_for_current_month__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_for_current_month__c</fullName>
    <formula>Invoiced_Amount__c +  Pending_ship_inv_within_Curr_month_Amt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount for current month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>