force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Total_PO_on_hand_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_on_hand_USD__c</fullName>
    <formula>Total_PO_on_hand__c  *  Invoice_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PO on hand $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>