force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/Total_QTY_for_current_month__c.field-meta.xml
<CustomField>
    <fullName>Total_QTY_for_current_month__c</fullName>
    <formula>Invoiced_QTY__c +  Pending_ship_inv_within_current_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total QTY for current month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>