force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/ZGRT14__c.field-meta.xml
<CustomField>
    <fullName>ZGRT14__c</fullName>
    <label>ZGRT14</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>