force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/ZRSD028__c.field-meta.xml
<CustomField>
    <fullName>ZRSD028__c</fullName>
    <label>ZRSD028</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>