force-app/main/default/objects/USA_Sales_Monitoring_Report__c/fields/ZSD005__c.field-meta.xml
<CustomField>
    <fullName>ZSD005__c</fullName>
    <label>ZSD005</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>